asp/gen/ASPParser.py
# Generated from /Users/giovanni/surfdrive/dev/pycosmos/ASP-parser/ASP.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ASPParser ( Parser ):

    grammarFileName = "ASP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "':-'", "'.'", "','", "'('", 
                     "')'", "'{'", "'}'", "'='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'not'", "'+'", "<INVALID>", "'_'", "'#domain'", 
                     "'..'" ]

    symbolicNames = [ "<INVALID>", "WS", "ENTAILS", "DOT", "COMMA", "LPAR", 
                      "RPAR", "LACC", "RACC", "EQ", "NEQ", "GT", "LT", "GE", 
                      "LE", "NOT", "PLUS", "MINUS", "UNDERSCORE", "DOMAIN", 
                      "RANGELEX", "INTEGER", "IDENTIFIER", "VARIABLE", "SINGLE_LINE_COMMENT", 
                      "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_asprule = 1
    RULE_aspfact = 2
    RULE_rangedef = 3
    RULE_normrule = 4
    RULE_constraint = 5
    RULE_choice = 6
    RULE_head = 7
    RULE_body = 8
    RULE_list_literals = 9
    RULE_list_ext_literals_expressions = 10
    RULE_expression = 11
    RULE_num_expression = 12
    RULE_ext_literal = 13
    RULE_literal = 14
    RULE_pos_literal = 15
    RULE_list_parameters = 16
    RULE_predicate = 17
    RULE_identifier = 18
    RULE_constant = 19
    RULE_variable = 20

    ruleNames =  [ "program", "asprule", "aspfact", "rangedef", "normrule", 
                   "constraint", "choice", "head", "body", "list_literals", 
                   "list_ext_literals_expressions", "expression", "num_expression", 
                   "ext_literal", "literal", "pos_literal", "list_parameters", 
                   "predicate", "identifier", "constant", "variable" ]

    EOF = Token.EOF
    WS=1
    ENTAILS=2
    DOT=3
    COMMA=4
    LPAR=5
    RPAR=6
    LACC=7
    RACC=8
    EQ=9
    NEQ=10
    GT=11
    LT=12
    GE=13
    LE=14
    NOT=15
    PLUS=16
    MINUS=17
    UNDERSCORE=18
    DOMAIN=19
    RANGELEX=20
    INTEGER=21
    IDENTIFIER=22
    VARIABLE=23
    SINGLE_LINE_COMMENT=24
    MULTILINE_COMMENT=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ASPParser.EOF, 0)

        def aspfact(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPParser.AspfactContext)
            else:
                return self.getTypedRuleContext(ASPParser.AspfactContext,i)


        def asprule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPParser.AspruleContext)
            else:
                return self.getTypedRuleContext(ASPParser.AspruleContext,i)


        def getRuleIndex(self):
            return ASPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ASPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ASPParser.ENTAILS) | (1 << ASPParser.LACC) | (1 << ASPParser.MINUS) | (1 << ASPParser.INTEGER) | (1 << ASPParser.IDENTIFIER))) != 0):
                self.state = 44
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 42
                    self.aspfact()
                    pass

                elif la_ == 2:
                    self.state = 43
                    self.asprule()
                    pass


                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(ASPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AspruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normrule(self):
            return self.getTypedRuleContext(ASPParser.NormruleContext,0)


        def constraint(self):
            return self.getTypedRuleContext(ASPParser.ConstraintContext,0)


        def getRuleIndex(self):
            return ASPParser.RULE_asprule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsprule" ):
                listener.enterAsprule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsprule" ):
                listener.exitAsprule(self)




    def asprule(self):

        localctx = ASPParser.AspruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_asprule)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASPParser.LACC, ASPParser.MINUS, ASPParser.INTEGER, ASPParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.normrule()
                pass
            elif token in [ASPParser.ENTAILS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.constraint()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AspfactContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(ASPParser.DOT, 0)

        def head(self):
            return self.getTypedRuleContext(ASPParser.HeadContext,0)


        def rangedef(self):
            return self.getTypedRuleContext(ASPParser.RangedefContext,0)


        def getRuleIndex(self):
            return ASPParser.RULE_aspfact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAspfact" ):
                listener.enterAspfact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAspfact" ):
                listener.exitAspfact(self)




    def aspfact(self):

        localctx = ASPParser.AspfactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_aspfact)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 55
                self.head()
                pass

            elif la_ == 2:
                self.state = 56
                self.rangedef()
                pass


            self.state = 59
            self.match(ASPParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangedefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.rangemin = None # Token
            self.rangemax = None # Token

        def identifier(self):
            return self.getTypedRuleContext(ASPParser.IdentifierContext,0)


        def LPAR(self):
            return self.getToken(ASPParser.LPAR, 0)

        def RANGELEX(self):
            return self.getToken(ASPParser.RANGELEX, 0)

        def RPAR(self):
            return self.getToken(ASPParser.RPAR, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(ASPParser.INTEGER)
            else:
                return self.getToken(ASPParser.INTEGER, i)

        def getRuleIndex(self):
            return ASPParser.RULE_rangedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRangedef" ):
                listener.enterRangedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRangedef" ):
                listener.exitRangedef(self)




    def rangedef(self):

        localctx = ASPParser.RangedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rangedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.identifier()
            self.state = 62
            self.match(ASPParser.LPAR)
            self.state = 63
            localctx.rangemin = self.match(ASPParser.INTEGER)
            self.state = 64
            self.match(ASPParser.RANGELEX)
            self.state = 65
            localctx.rangemax = self.match(ASPParser.INTEGER)
            self.state = 66
            self.match(ASPParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def head(self):
            return self.getTypedRuleContext(ASPParser.HeadContext,0)


        def ENTAILS(self):
            return self.getToken(ASPParser.ENTAILS, 0)

        def body(self):
            return self.getTypedRuleContext(ASPParser.BodyContext,0)


        def DOT(self):
            return self.getToken(ASPParser.DOT, 0)

        def getRuleIndex(self):
            return ASPParser.RULE_normrule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormrule" ):
                listener.enterNormrule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormrule" ):
                listener.exitNormrule(self)




    def normrule(self):

        localctx = ASPParser.NormruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_normrule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.head()
            self.state = 69
            self.match(ASPParser.ENTAILS)
            self.state = 70
            self.body()
            self.state = 71
            self.match(ASPParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTAILS(self):
            return self.getToken(ASPParser.ENTAILS, 0)

        def body(self):
            return self.getTypedRuleContext(ASPParser.BodyContext,0)


        def DOT(self):
            return self.getToken(ASPParser.DOT, 0)

        def getRuleIndex(self):
            return ASPParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)




    def constraint(self):

        localctx = ASPParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(ASPParser.ENTAILS)
            self.state = 74
            self.body()
            self.state = 75
            self.match(ASPParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChoiceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.choicemin = None # Token
            self.choicemax = None # Token

        def LACC(self):
            return self.getToken(ASPParser.LACC, 0)

        def list_literals(self):
            return self.getTypedRuleContext(ASPParser.List_literalsContext,0)


        def RACC(self):
            return self.getToken(ASPParser.RACC, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(ASPParser.INTEGER)
            else:
                return self.getToken(ASPParser.INTEGER, i)

        def getRuleIndex(self):
            return ASPParser.RULE_choice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChoice" ):
                listener.enterChoice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChoice" ):
                listener.exitChoice(self)




    def choice(self):

        localctx = ASPParser.ChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_choice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPParser.INTEGER:
                self.state = 77
                localctx.choicemin = self.match(ASPParser.INTEGER)


            self.state = 80
            self.match(ASPParser.LACC)
            self.state = 81
            self.list_literals()
            self.state = 82
            self.match(ASPParser.RACC)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPParser.INTEGER:
                self.state = 83
                localctx.choicemax = self.match(ASPParser.INTEGER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(ASPParser.LiteralContext,0)


        def choice(self):
            return self.getTypedRuleContext(ASPParser.ChoiceContext,0)


        def getRuleIndex(self):
            return ASPParser.RULE_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHead" ):
                listener.enterHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHead" ):
                listener.exitHead(self)




    def head(self):

        localctx = ASPParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_head)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASPParser.MINUS, ASPParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.literal()
                pass
            elif token in [ASPParser.LACC, ASPParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.choice()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_ext_literals_expressions(self):
            return self.getTypedRuleContext(ASPParser.List_ext_literals_expressionsContext,0)


        def choice(self):
            return self.getTypedRuleContext(ASPParser.ChoiceContext,0)


        def getRuleIndex(self):
            return ASPParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = ASPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.list_ext_literals_expressions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.choice()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_literalsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(ASPParser.LiteralContext,0)


        def COMMA(self):
            return self.getToken(ASPParser.COMMA, 0)

        def list_literals(self):
            return self.getTypedRuleContext(ASPParser.List_literalsContext,0)


        def getRuleIndex(self):
            return ASPParser.RULE_list_literals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_literals" ):
                listener.enterList_literals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_literals" ):
                listener.exitList_literals(self)




    def list_literals(self):

        localctx = ASPParser.List_literalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_literals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.literal()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPParser.COMMA:
                self.state = 95
                self.match(ASPParser.COMMA)
                self.state = 96
                self.list_literals()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_ext_literals_expressionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ext_literal(self):
            return self.getTypedRuleContext(ASPParser.Ext_literalContext,0)


        def expression(self):
            return self.getTypedRuleContext(ASPParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(ASPParser.COMMA, 0)

        def list_ext_literals_expressions(self):
            return self.getTypedRuleContext(ASPParser.List_ext_literals_expressionsContext,0)


        def getRuleIndex(self):
            return ASPParser.RULE_list_ext_literals_expressions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_ext_literals_expressions" ):
                listener.enterList_ext_literals_expressions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_ext_literals_expressions" ):
                listener.exitList_ext_literals_expressions(self)




    def list_ext_literals_expressions(self):

        localctx = ASPParser.List_ext_literals_expressionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_list_ext_literals_expressions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 99
                self.ext_literal()
                pass

            elif la_ == 2:
                self.state = 100
                self.expression()
                pass


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPParser.COMMA:
                self.state = 103
                self.match(ASPParser.COMMA)
                self.state = 104
                self.list_ext_literals_expressions()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(ASPParser.EQ, 0)

        def NEQ(self):
            return self.getToken(ASPParser.NEQ, 0)

        def LT(self):
            return self.getToken(ASPParser.LT, 0)

        def LE(self):
            return self.getToken(ASPParser.LE, 0)

        def GT(self):
            return self.getToken(ASPParser.GT, 0)

        def GE(self):
            return self.getToken(ASPParser.GE, 0)

        def identifier(self):
            return self.getTypedRuleContext(ASPParser.IdentifierContext,0)


        def variable(self):
            return self.getTypedRuleContext(ASPParser.VariableContext,0)


        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(ASPParser.INTEGER)
            else:
                return self.getToken(ASPParser.INTEGER, i)

        def num_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPParser.Num_expressionContext)
            else:
                return self.getTypedRuleContext(ASPParser.Num_expressionContext,i)


        def IDENTIFIER(self):
            return self.getToken(ASPParser.IDENTIFIER, 0)

        def VARIABLE(self):
            return self.getToken(ASPParser.VARIABLE, 0)

        def getRuleIndex(self):
            return ASPParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = ASPParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 107
                self.identifier()
                pass

            elif la_ == 2:
                self.state = 108
                self.variable()
                pass

            elif la_ == 3:
                self.state = 109
                self.match(ASPParser.INTEGER)
                pass

            elif la_ == 4:
                self.state = 110
                self.num_expression()
                pass


            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ASPParser.EQ) | (1 << ASPParser.NEQ) | (1 << ASPParser.GT) | (1 << ASPParser.LT) | (1 << ASPParser.GE) | (1 << ASPParser.LE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 114
                self.match(ASPParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 115
                self.match(ASPParser.VARIABLE)
                pass

            elif la_ == 3:
                self.state = 116
                self.match(ASPParser.INTEGER)
                pass

            elif la_ == 4:
                self.state = 117
                self.num_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Num_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(ASPParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(ASPParser.MINUS, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPParser.VariableContext)
            else:
                return self.getTypedRuleContext(ASPParser.VariableContext,i)


        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(ASPParser.INTEGER)
            else:
                return self.getToken(ASPParser.INTEGER, i)

        def getRuleIndex(self):
            return ASPParser.RULE_num_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNum_expression" ):
                listener.enterNum_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNum_expression" ):
                listener.exitNum_expression(self)




    def num_expression(self):

        localctx = ASPParser.Num_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_num_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASPParser.VARIABLE]:
                self.state = 120
                self.variable()
                pass
            elif token in [ASPParser.INTEGER]:
                self.state = 121
                self.match(ASPParser.INTEGER)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 124
            _la = self._input.LA(1)
            if not(_la==ASPParser.PLUS or _la==ASPParser.MINUS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASPParser.VARIABLE]:
                self.state = 125
                self.variable()
                pass
            elif token in [ASPParser.INTEGER]:
                self.state = 126
                self.match(ASPParser.INTEGER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ext_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(ASPParser.LiteralContext,0)


        def NOT(self):
            return self.getToken(ASPParser.NOT, 0)

        def getRuleIndex(self):
            return ASPParser.RULE_ext_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExt_literal" ):
                listener.enterExt_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExt_literal" ):
                listener.exitExt_literal(self)




    def ext_literal(self):

        localctx = ASPParser.Ext_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ext_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPParser.NOT:
                self.state = 129
                self.match(ASPParser.NOT)


            self.state = 132
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pos_literal(self):
            return self.getTypedRuleContext(ASPParser.Pos_literalContext,0)


        def MINUS(self):
            return self.getToken(ASPParser.MINUS, 0)

        def getRuleIndex(self):
            return ASPParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = ASPParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPParser.MINUS:
                self.state = 134
                self.match(ASPParser.MINUS)


            self.state = 137
            self.pos_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pos_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(ASPParser.PredicateContext,0)


        def LPAR(self):
            return self.getToken(ASPParser.LPAR, 0)

        def list_parameters(self):
            return self.getTypedRuleContext(ASPParser.List_parametersContext,0)


        def RPAR(self):
            return self.getToken(ASPParser.RPAR, 0)

        def getRuleIndex(self):
            return ASPParser.RULE_pos_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPos_literal" ):
                listener.enterPos_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPos_literal" ):
                listener.exitPos_literal(self)




    def pos_literal(self):
